<resources>
    <string name="app_name">Mishlavim</string>
    <string name="hint">סיסמא</string>
    <string name="buttonName">טופס 1</string>
    <string name="button3">טופס 3</string>
    <string name="fillform"> מלא טופס נוכחי</string>
    <string name="button2">טופס 2</string>
    <string name="button4">טופס 4</string>
    <string name="button5">טופס 5</string>
    <string name="button6">טופס 6</string>
    <string name="button7">טופס 7</string>
    <string name="button8">טופס 8</string>
    <string name="add_new_form">הוסף טופס חדש</string>
    <string name="add_new_guide">הוסף מדריך חדש</string>
    <string name="nametext">ברוך הבא [USERNAME]!</string>
    <string name="currentForm"> טופס **</string>
    <string name="existing_forms">טפסים קיימים:</string>
    <string name="existing_guides">מדריכים קיימים:</string>
    <string name="forms">טפסים:</string>
    <string name="guides">מדריכים:</string>
    <string name="question1">מלל שאלה 1</string>
    <string name="question2">מלל שאלה 2</string>
    <string name="question3">מלל שאלה 3</string>
    <string name="answer">הכנס תשובתך פה</string>
    <string name="buttonFive">הרבה מאוד</string>
    <string name="buttonFour">הרבה</string>
    <string name="buttonThree">בינוני</string>
    <string name="buttonTwo">מעט</string>
    <string name="buttonSave">שמור</string>
    <string name="buttonSend">שלח טופס</string>
<<<<<<< Updated upstream
    <string name="userHasAdd">המשתמש נוסף בהצלחה!</string>
=======
    <string name="textOff">מדריכים</string>
    <string name="textOn">טפסים</string>
>>>>>>> Stashed changes

    <string name="title_add_new_user_activity">הוספת משתמש</string>
    <string name="action_register">רשום משתמש</string>
    <string name="title_email">אימייל:</string>
    <string name="title_user_name">שם מלא:</string>
    <string name="title_user_password">:סיסמה</string>
    <string name="title_verify_password">:אימות סיסמה</string>
    <string name="prompt_add_user">נא הכנס את פרטי המשתמש:</string>
    <string name="prompt_admin">מנהל</string>
    <string name="prompt_guide">מדריך</string>
    <string name="prompt_volunteer">מתנדב</string>
    <string name="title_my_guide">:המדריך שלי</string>
    <string name="invalid_userName">שם מלא אינו תקין</string>
<<<<<<< Updated upstream
    <string name="update_failed">"העדכון נכשל"</string>
=======

    <string name="creat_new_form">טופס חדש</string>
>>>>>>> Stashed changes

    <string name="register_failed">"הרשמה נכשלה"</string>
    <string name="welcome_admin">ברוך הבא ADMIN</string>
    <string name="title_activity_login">מסך כניסה</string>
    <string name="logo">לוגו</string>
    <string name="prompt_email">אימייל</string>
    <string name="prompt_password">סיסמה</string>
    <string name="action_sign_in">כניסה</string>
    <string name="prompt_mishlavim">תכנית משלבים</string>

    <!--    <string name="invalid_password">סיסמה קצרה מדי</string>-->
    <string name="forget_password">שכחת סיסמה?</string>
    <string name="login_failed">"כניסה נכשלה"</string>
    <string name="invalid_email">אימייל אינו תקין</string>
    <string name="empty_email">אימייל הינו שדה חובה, אנא מלא אותו</string>
    <string name="invalid_password">הסיסמה אינה תקינה, על הסיסמה להכיל לפחות 6 תווים המכילים תווים ואותיות, ללא רווח בינהן.</string>
    <string name="empty_password">הסיסמה הינה שדה חובה, אנא מלא אותו</string>
    <string name="empty_verifyPassword">אנא אמת את הסיסמה</string>
    <string name="invalid_verifyPasswordSame">הסיסמאות אינן תואמות, אנא נסה שנית</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>